[gd_scene load_steps=13 format=3 uid="uid://ckvq8yxvnwmje"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_player"]
[ext_resource type="Shader" path="res://assets/shaders/glow_shader.gdshader" id="2_glow"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_player"]
size = Vector2(48, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_pickup"]
radius = 120.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_glow"]
shader = ExtResource("2_glow")
shader_parameter/glow_color = Color(0, 0.8, 1, 1)
shader_parameter/glow_intensity = 1.5
shader_parameter/pulse_speed = 3.0
shader_parameter/glow_size = 0.15

[sub_resource type="Gradient" id="Gradient_trail"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.2, 0.6, 1, 1, 0.4, 0.7, 1, 0.5, 0.6, 0.8, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_trail"]
gradient = SubResource("Gradient_trail")

[sub_resource type="Curve" id="Curve_trail"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_trail"]
curve = SubResource("Curve_trail")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_trail"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_trail")
color_ramp = SubResource("GradientTexture1D_trail")

[sub_resource type="Gradient" id="Gradient_energy"]
offsets = PackedFloat32Array(0, 0.7, 1)
colors = PackedColorArray(0, 1, 1, 0.8, 0.2, 0.8, 1, 0.5, 0.4, 0.6, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_energy"]
gradient = SubResource("Gradient_energy")

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 6
script = ExtResource("1_player")

[node name="TrailParticles" type="GPUParticles2D" parent="."]
z_index = -1
amount = 50
process_material = SubResource("ParticleProcessMaterial_trail")
lifetime = 0.5
preprocess = 0.2

[node name="Shadow" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -22.0
offset_right = 28.0
offset_bottom = 30.0
rotation = 0.0872665
color = Color(0, 0, 0, 0.4)

[node name="VisualEffects" type="Node2D" parent="."]
material = SubResource("ShaderMaterial_glow")

[node name="OuterGlow" type="ColorRect" parent="VisualEffects"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0, 0.8, 1, 0.3)

[node name="Body" type="ColorRect" parent="VisualEffects"]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
color = Color(0.1, 0.3, 0.8, 1)

[node name="BodyHighlight" type="ColorRect" parent="VisualEffects"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.2, 0.5, 1, 1)

[node name="CoreGlow" type="ColorRect" parent="VisualEffects"]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.3, 0.7, 1, 0.8)

[node name="Core" type="ColorRect" parent="VisualEffects"]
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
color = Color(0.5, 0.9, 1, 1)

[node name="EyeGlow1" type="ColorRect" parent="VisualEffects"]
offset_left = -10.0
offset_top = -8.0
offset_right = -1.0
offset_bottom = 1.0
color = Color(0, 1, 1, 0.5)

[node name="Eye1" type="ColorRect" parent="VisualEffects"]
offset_left = -8.0
offset_top = -6.0
offset_right = -2.0
offset_bottom = 0.0
color = Color(0.8, 1, 1, 1)

[node name="EyeGlow2" type="ColorRect" parent="VisualEffects"]
offset_left = 1.0
offset_top = -8.0
offset_right = 10.0
offset_bottom = 1.0
color = Color(0, 1, 1, 0.5)

[node name="Eye2" type="ColorRect" parent="VisualEffects"]
offset_left = 2.0
offset_top = -6.0
offset_right = 8.0
offset_bottom = 0.0
color = Color(0.8, 1, 1, 1)

[node name="Visor" type="ColorRect" parent="VisualEffects"]
offset_left = -18.0
offset_top = -12.0
offset_right = 18.0
offset_bottom = -4.0
color = Color(0, 1, 1, 0.6)

[node name="VisorLine" type="ColorRect" parent="VisualEffects"]
offset_left = -18.0
offset_top = -9.0
offset_right = 18.0
offset_bottom = -7.0
color = Color(0.5, 1, 1, 0.8)

[node name="ArmorPlate1" type="ColorRect" parent="VisualEffects"]
offset_left = -22.0
offset_top = 8.0
offset_right = -14.0
offset_bottom = 16.0
color = Color(0.15, 0.35, 0.9, 1)

[node name="ArmorPlate2" type="ColorRect" parent="VisualEffects"]
offset_left = 14.0
offset_top = 8.0
offset_right = 22.0
offset_bottom = 16.0
color = Color(0.15, 0.35, 0.9, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_player")

[node name="WeaponPivot" type="Node2D" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 1
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_player")

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_pickup")

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
volume_db = -3.0
